--- a/client/src/components/menu-item/menu-item.styles.scss
+++ b/client/src/components/menu-item/menu-item.styles.scss
@@ -11,17 +11,16 @@
 
   &:hover {
     cursor: pointer;
-  
+
     & .background-image {
       transform: scale(1.1);
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
-  
+
     & .content {
       opacity: 0.9;
     }
   }
-
 
   &.large {
     height: 380px;
@@ -51,7 +50,7 @@
     justify-content: center;
     border: 1px solid black;
     background-color: white;
-    opacity: .7;
+    opacity: 0.7;
     position: absolute;
 
     .title {
@@ -65,5 +64,9 @@
       font-weight: lighter;
       font-size: 16px;
     }
+  }
+
+  @media screen and (max-width: 800px) {
+    height: 200px;
   }
 }
